--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <li><a href="category/elect">电子</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right navbar-sm">
-        <!--<li><input type="text" class="search-input" placeholder="歌名 / 歌手"></li>-->
-        <!--<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>-->
-        <!--<li><a href="#">注册 / 登录</a></li>-->
+        <!-- <li><input type="text" class="search-input" placeholder="歌名 / 歌手"></li> -->
+        <!-- <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li> -->
+        <li><a href="./login.html" class="login">注册 / 登录</a></li>
       </ul>
     </nav>
   </div>
@@ -616,6 +616,10 @@
     HBSlider.setItems(sliderData);
     HBSlider.init();
     HBSlider.play();
+
+    $('.login').click(function() {
+      console.log('123');
+    });
   });
 </script>
 </body>
